--- a/daili2.yaml
+++ b/daili2.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 47393
+  Rank: 47243
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,22 +60,22 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 41874
+  Rank: 41724
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.6
-  maximum: 47.88
-  average: 36.04
-  UpdateDay: '2022-06-13T21:30:13.830350'
+  minimum: 14.63
+  maximum: 76.06
+  average: 45.0
+  UpdateDay: '2022-06-14T00:30:33.918862'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 40050
+  Rank: 40121
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -85,12 +85,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 188.71
-  maximum: 217.24
-  average: 206.33
-  UpdateDay: '2022-06-13T21:30:14.312348'
+  minimum: 59.78
+  maximum: 102.34
+  average: 74.35
+  UpdateDay: '2022-06-14T00:31:31.570457'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 37639
+  Rank: 37667
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -100,27 +100,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 104.91
-  maximum: 259.5
-  average: 206.62
-  UpdateDay: '2022-06-13T21:30:14.312642'
+  minimum: 100.07
+  maximum: 1090.13
+  average: 430.34
+  UpdateDay: '2022-06-14T00:31:32.650862'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 31583
+  Rank: 31635
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.87
-  maximum: 59.41
-  average: 50.09
-  UpdateDay: '2022-06-13T21:30:13.835494'
+  minimum: 42.99
+  maximum: 111.38
+  average: 68.15
+  UpdateDay: '2022-06-14T00:30:33.975812'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 28395
+  Rank: 28461
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -130,12 +130,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.95
-  maximum: 47.51
-  average: 42.85
-  UpdateDay: '2022-06-13T18:31:45.538767'
+  minimum: 37.54
+  maximum: 48.77
+  average: 45.0
+  UpdateDay: '2022-06-14T00:31:31.559825'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 27230
+  Rank: 27323
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -150,7 +150,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 27068
+  Rank: 27118
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -162,7 +162,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 26476
+  Rank: 26526
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -174,7 +174,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 26146
+  Rank: 26241
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -189,7 +189,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 25830
+  Rank: 25930
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -202,7 +202,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 22982
+  Rank: 22832
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -217,22 +217,22 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 21933
+  Rank: 21783
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
-  port: 889
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 889
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.26
-  maximum: 48.63
-  average: 45.37
-  UpdateDay: '2022-06-13T21:30:13.866280'
+  minimum: 39.73
+  maximum: 46.58
+  average: 42.79
+  UpdateDay: '2022-06-14T00:30:33.929544'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 21047
+  Rank: 21094
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -245,22 +245,22 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 20293
+  Rank: 20143
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 79.02
-  maximum: 1084.27
-  average: 415.03
-  UpdateDay: '2022-06-13T21:30:14.948314'
+  minimum: 53.3
+  maximum: 76.99
+  average: 67.68
+  UpdateDay: '2022-06-14T00:31:31.531805'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 18706
+  Rank: 18739
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
   port: 443
@@ -270,27 +270,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.68
-  maximum: 47.93
-  average: 44.79
-  UpdateDay: '2022-06-13T21:30:13.868857'
+  minimum: 38.26
+  maximum: 38.61
+  average: 38.47
+  UpdateDay: '2022-06-14T00:31:31.438066'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 15587
+  Rank: 15677
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
+  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 46.33
-  maximum: 1061.82
-  average: 719.67
-  UpdateDay: '2022-06-13T21:30:15.854777'
+  minimum: 40.8
+  maximum: 1053.54
+  average: 380.05
+  UpdateDay: '2022-06-14T00:30:34.892823'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 15200
+  Rank: 15234
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   port: 443
@@ -300,27 +300,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 177.74
-  maximum: 191.25
-  average: 186.56
-  UpdateDay: '2022-06-13T21:30:14.250815'
+  minimum: 190.74
+  maximum: 196.31
+  average: 192.77
+  UpdateDay: '2022-06-14T00:31:32.027862'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 14968
+  Rank: 15020
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: share.mjj-home.com
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 151.7
-  maximum: 162.26
-  average: 157.58
-  UpdateDay: '2022-06-13T21:30:14.321987'
+  minimum: 151.32
+  maximum: 186.47
+  average: 173.32
+  UpdateDay: '2022-06-14T00:30:59.684836'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 14230
+  Rank: 14249
 proxy-groups:
 - name: PG-default
   type: fallback
