--- a/daili2.yaml
+++ b/daili2.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 46493
+  Rank: 46343
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,22 +60,22 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 40974
+  Rank: 40824
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 7.37
-  maximum: 51.53
-  average: 22.67
-  UpdateDay: '2022-06-14T03:32:26.218882'
+  minimum: 9.74
+  maximum: 40.81
+  average: 22.09
+  UpdateDay: '2022-06-14T06:31:26.203596'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 40567
+  Rank: 40669
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -85,12 +85,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 127.26
-  maximum: 1077.67
-  average: 457.17
-  UpdateDay: '2022-06-14T03:33:28.425847'
+  minimum: 59.6
+  maximum: 62.01
+  average: 60.47
+  UpdateDay: '2022-06-14T06:31:26.372963'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 38057
+  Rank: 38154
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -100,42 +100,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 52.27
-  maximum: 58.23
-  average: 54.75
-  UpdateDay: '2022-06-14T03:33:27.222908'
+  minimum: 52.31
+  maximum: 53.86
+  average: 53.31
+  UpdateDay: '2022-06-14T06:31:26.355245'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 32022
+  Rank: 32124
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.0
-  maximum: 48.89
-  average: 43.83
-  UpdateDay: '2022-06-14T03:32:26.373609'
+  minimum: 40.21
+  maximum: 41.35
+  average: 40.91
+  UpdateDay: '2022-06-14T06:31:26.300223'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 28947
+  Rank: 29049
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.66
-  maximum: 60.51
-  average: 50.68
-  UpdateDay: '2022-06-14T03:33:02.301713'
+  minimum: 37.32
+  maximum: 48.77
+  average: 43.25
+  UpdateDay: '2022-06-14T06:31:26.354759'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 27824
+  Rank: 27926
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -150,19 +150,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 27368
-- name: www.ggchk.ga:443@trojan
-  password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
-  port: 443
-  server: www.ggchk.ga
-  type: trojan
-  success_rate: 100.0
-  minimum: 52.3
-  maximum: 63.21
-  average: 56.06
-  UpdateDay: '2022-04-03T15:12:54.456600'
-  PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 26776
+  Rank: 27418
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -174,7 +162,19 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 26741
+  Rank: 26841
+- name: www.ggchk.ga:443@trojan
+  password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
+  port: 443
+  server: www.ggchk.ga
+  type: trojan
+  success_rate: 100.0
+  minimum: 52.3
+  maximum: 63.21
+  average: 56.06
+  UpdateDay: '2022-04-03T15:12:54.456600'
+  PFirstFoundDay: '2022-03-11T21:04:39.779731'
+  Rank: 26826
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -189,7 +189,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 26430
+  Rank: 26530
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -202,22 +202,22 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 22082
+  Rank: 21932
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   type: trojan
   country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.52
-  maximum: 48.13
-  average: 43.89
-  UpdateDay: '2022-06-14T03:32:26.315661'
+  minimum: 41.89
+  maximum: 47.04
+  average: 44.06
+  UpdateDay: '2022-06-14T06:30:28.557588'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 21323
+  Rank: 21354
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -232,7 +232,22 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 21033
+  Rank: 20883
+- name: ssl.tcpbbr.net:443@trojan
+  server: ssl.tcpbbr.net
+  port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
+  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 41.37
+  maximum: 47.5
+  average: 44.94
+  UpdateDay: '2022-06-14T06:31:26.309339'
+  PFirstFoundDay: '2022-03-27T06:36:10.059372'
+  Rank: 19297
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -245,52 +260,37 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 19393
-- name: ssl.tcpbbr.net:443@trojan
-  server: ssl.tcpbbr.net
+  Rank: 19243
+- name: hk31.ssgnode.ga:443@trojan
+  server: hk31.ssgnode.ga
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 41.53
-  maximum: 48.82
-  average: 45.55
-  UpdateDay: '2022-06-14T03:33:27.182779'
-  PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 19195
-- name: hk31.ssgnode.ga:443@trojan
-  server: hk31.ssgnode.ga
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
-  port: 443
   password: 41742_920c8caa
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.98
-  maximum: 50.75
-  average: 45.75
-  UpdateDay: '2022-06-14T03:32:26.385958'
+  minimum: 37.96
+  maximum: 38.56
+  average: 38.28
+  UpdateDay: '2022-06-14T06:31:26.290245'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 16161
+  Rank: 16263
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.54
-  maximum: 1050.78
-  average: 380.34
-  UpdateDay: '2022-06-14T03:33:28.186262'
+  minimum: 38.12
+  maximum: 39.3
+  average: 38.8
+  UpdateDay: '2022-06-14T06:31:26.295678'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 15547
+  Rank: 15649
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   port: 443
@@ -300,27 +300,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 179.4
-  maximum: 196.99
-  average: 189.09
-  UpdateDay: '2022-06-14T03:33:27.774898'
+  minimum: 175.77
+  maximum: 189.03
+  average: 184.35
+  UpdateDay: '2022-06-14T06:31:26.784705'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 15272
+  Rank: 15320
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: share.mjj-home.com
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 147.02
-  maximum: 154.88
-  average: 149.88
-  UpdateDay: '2022-06-14T03:33:27.618974'
+  minimum: 144.28
+  maximum: 155.19
+  average: 150.39
+  UpdateDay: '2022-06-14T06:31:04.803265'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 14495
+  Rank: 14546
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -336,14 +336,14 @@ proxy-groups:
   - www.zx07.top:443@trojan
   - www.tokyo2023.ga:443@trojan
   - www.gomacau.gq:443@trojan
-  - www.ggchk.ga:443@trojan
   - www.seetheworldjp.ga:443@trojan
+  - www.ggchk.ga:443@trojan
   - www.tokyo2021.ga:443@trojan
   - fkgfw-prod.i.sxl.cn:443@ss
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
-  - 101.91.121.247:50004@ss
   - ssl.tcpbbr.net:443@trojan
+  - 101.91.121.247:50004@ss
   - hk31.ssgnode.ga:443@trojan
   - api.tcpbbr.net:443@trojan
   - v.9051246.xyz:443@trojan
